crates/cpg-schema/tests/snapshots/contracts__source_context_arguments.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table source_context_arguments
family findings
key snapshot_id, site_id, ordinal
check ordinal_nonnegative: ordinal >= 0
@lctx.family=findings
@lctx.table=source_context_arguments
snapshot_id: FixedSizeBinary(16) NOT NULL
site_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
argument_fact_id: FixedSizeBinary(16) NOT NULL
expression_fact_id: FixedSizeBinary(16) NOT NULL
parameter_fact_id: FixedSizeBinary(16) NULL
exception_class_node_id: FixedSizeBinary(16) NULL
exception_class_fact_id: FixedSizeBinary(16) NULL
exception_module_fact_id: FixedSizeBinary(16) NULL
reference_fact_id: FixedSizeBinary(16) NULL
resolution_fact_id: FixedSizeBinary(16) NULL
