crates/cpg-schema/tests/snapshots/contracts__source_context_sites.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table source_context_sites
family findings
key snapshot_id, site_id
check ordinal_nonnegative: item_ordinal >= 0
@lctx.family=findings
@lctx.table=source_context_sites
snapshot_id: FixedSizeBinary(16) NOT NULL
site_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
with_node_id: FixedSizeBinary(16) NOT NULL
with_fact_id: FixedSizeBinary(16) NOT NULL
item_node_id: FixedSizeBinary(16) NOT NULL
item_fact_id: FixedSizeBinary(16) NOT NULL
item_ordinal: Int64 NOT NULL
call_node_id: FixedSizeBinary(16) NOT NULL
call_fact_id: FixedSizeBinary(16) NOT NULL
expression_fact_id: FixedSizeBinary(16) NOT NULL
protocol_id: FixedSizeBinary(16) NOT NULL
model_id: FixedSizeBinary(16) NOT NULL
class_node_id: FixedSizeBinary(16) NOT NULL
reference_fact_id: FixedSizeBinary(16) NOT NULL
resolution_fact_id: FixedSizeBinary(16) NOT NULL
import_binding_fact_id: FixedSizeBinary(16) NOT NULL
import_region_fact_id: FixedSizeBinary(16) NOT NULL
import_condition_id: FixedSizeBinary(16) NOT NULL
export_fact_id: FixedSizeBinary(16) NOT NULL
allocation_call_fact_id: FixedSizeBinary(16) NOT NULL
initialization_call_fact_id: FixedSizeBinary(16) NOT NULL
constructor_valid: Boolean NOT NULL
entry_argument_fact_id: FixedSizeBinary(16) NULL
