crates/cpg-schema/tests/snapshots/contracts__source_parameter_identities.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table source_parameter_identities
family findings
key snapshot_id, identity_id
check span_order: start_byte >= 0 AND end_byte >= start_byte
@lctx.family=findings
@lctx.table=source_parameter_identities
snapshot_id: FixedSizeBinary(16) NOT NULL
identity_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
parameter_node_id: FixedSizeBinary(16) NOT NULL
source_flow_fact_id: FixedSizeBinary(16) NOT NULL
source_origin_id: FixedSizeBinary(16) NOT NULL
condition_id: FixedSizeBinary(16) NOT NULL
return_site_fact_id: FixedSizeBinary(16) NOT NULL
expression_fact_id: FixedSizeBinary(16) NOT NULL
reference_fact_id: FixedSizeBinary(16) NOT NULL
resolution_fact_id: FixedSizeBinary(16) NOT NULL
binding_fact_id: FixedSizeBinary(16) NOT NULL
parameter_fact_id: FixedSizeBinary(16) NOT NULL
module_node_id: FixedSizeBinary(16) NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
