crates/cpg-schema/tests/snapshots/contracts__statement_completion_steps.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table statement_completion_steps
family findings
key snapshot_id, source_fact_id, ordinal
check ordinal_nonnegative: ordinal >= 0
@lctx.family=findings
@lctx.table=statement_completion_steps
snapshot_id: FixedSizeBinary(16) NOT NULL
source_fact_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
evidence_id: FixedSizeBinary(16) NOT NULL
kind: Int16 NOT NULL [lctx.codebook=summary_flow_step_kind]
