crates/cpg-schema/tests/snapshots/contracts__summary_boundaries.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table summary_boundaries
family findings
key snapshot_id, function_node_id, parameter_node_id, source_flow_fact_id, condition_id
@lctx.family=findings
@lctx.table=summary_boundaries
snapshot_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
parameter_node_id: FixedSizeBinary(16) NOT NULL
source_flow_fact_id: FixedSizeBinary(16) NOT NULL
condition_id: FixedSizeBinary(16) NOT NULL
reason: Int16 NOT NULL [lctx.codebook=boundary_reason]
local_through_call: Boolean NOT NULL
upstream_through_call: Boolean NOT NULL
raw_approximated: Boolean NOT NULL
