crates/cpg-schema/tests/snapshots/contracts__summary_flows.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table summary_flows
family findings
key snapshot_id, summary_id
check boundary_iff_unknown: (verdict = 3 AND boundary_reason IS NOT NULL) OR (verdict IN (0, 1) AND boundary_reason IS NULL)
check depth_nonnegative: path_depth >= 0
@lctx.family=findings
@lctx.table=summary_flows
snapshot_id: FixedSizeBinary(16) NOT NULL
summary_id: FixedSizeBinary(16) NOT NULL
function_node_id: FixedSizeBinary(16) NOT NULL
parameter_node_id: FixedSizeBinary(16) NOT NULL
input_path: Utf8 NOT NULL
output_path: Utf8 NOT NULL
kind: Int16 NOT NULL [lctx.codebook=summary_flow_kind]
condition_id: FixedSizeBinary(16) NOT NULL
verdict: Int16 NOT NULL [lctx.codebook=verdict]
boundary_reason: Int16 NULL [lctx.codebook=boundary_reason]
source_flow_fact_id: FixedSizeBinary(16) NOT NULL
source_origin_id: FixedSizeBinary(16) NOT NULL
return_site_fact_id: FixedSizeBinary(16) NOT NULL
return_region_fact_id: FixedSizeBinary(16) NOT NULL
approximated: Boolean NOT NULL
path_depth: Int64 NOT NULL
